--- a/.travis.yml
+++ b/.travis.yml
@@ -246,6 +246,13 @@ matrix:
         - MATRIX_EVAL="CC=clang && CXX=clang++"
         - TRANSLATE=false
         - COVERAGE=false
+        
+     - os: osx
+      osx_image: xcode11.2.1
+      env:
+        - MATRIX_EVAL="CC=clang && CXX=clang++"
+        - TRANSLATE=false
+        - COVERAGE=false    
 
 before_install:
   - eval "${MATRIX_EVAL}"
