--- a/.travis.yml
+++ b/.travis.yml
@@ -36,18 +36,18 @@ matrix:
          - COVERAGE=false
 
     - os: osx
-      osx_image: xcode9.4.1
+      osx_image: xcode11.3
       env:
         - MATRIX_EVAL="CC=clang && CXX=clang++"
         - TRANSLATE=false
         - COVERAGE=false
 
-    - os: osx
-      osx_image: xcode11.2.1
-      env:
-        - MATRIX_EVAL="CC=clang && CXX=clang++"
-        - TRANSLATE=false
-        - COVERAGE=false               
+#    - os: osx
+#      osx_image: xcode11.2.1
+#      env:
+#        - MATRIX_EVAL="CC=clang && CXX=clang++"
+#        - TRANSLATE=false
+#        - COVERAGE=false               
 
 before_install:
   - eval "${MATRIX_EVAL}"
